Update Workflow for multiplatorm tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,4 +56,4 @@ jobs:
         with:
           gradle-distribution-sha-256-sum-warning: false
       - name: Test
-        run: ./gradlew test
+        run: ./gradlew allTests
